k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: coffer-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: coffer-frontend

  template:
    metadata:
      labels:
        app: coffer-frontend

    spec:
      containers:
        - name: frontend
          image: asia-south1-docker.pkg.dev/coffer-506809/coffer-docker/frontend:latest

          ports:
            - containerPort: 80
