k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: coffer-backend

spec:
  selector:
    app: coffer-backend

  ports:
    - port: 3000
      targetPort: 3000

  type: ClusterIP
