k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: coffer-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "coffer-ingress-ip"
    networking.gke.io/managed-certificates: "coffer-certificate"

spec:
  defaultBackend:
    service:
      name: coffer-frontend
      port:
        number: 80

  rules:
    - http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: coffer-backend
                port:
                  number: 3000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: coffer-backend
                port:
                  number: 3000

          - path: /email
            pathType: Prefix
            backend:
              service:
                name: coffer-backend
                port:
                  number: 3000

          - path: /reply-ai
            pathType: Prefix
            backend:
              service:
                name: coffer-backend
                port:
                  number: 3000

          - path: /reply
            pathType: Prefix
            backend:
              service:
                name: coffer-backend
                port:
                  number: 3000
